--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".GameFragment">
 
@@ -23,22 +22,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:letterSpacing="0.1"
-            android:textSize="36sp"
-            android:text="@{gameViewModel.secretWordDisplay}" />
+            android:text="@{gameViewModel.secretWordDisplay}"
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/lives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@{@string/lives_left(gameViewModel.livesLeft)}" />
+            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/incorrect_guesses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}" />
+            android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/guess"
@@ -55,12 +54,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Guess!" />
+
         <Button
             android:id="@+id/finish_game_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Finish Game"
-            android:onClick="@{() -> gameViewModel.finishGame()}" />
+            android:onClick="@{() -> gameViewModel.finishGame()}"
+            android:text="Finish Game" />
+
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/compose_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
